# int20h-2017y-pretask

./: .gitignore  int20h-2017y-pretask.cabal
src/: Lib.hs
