name:                int20h-2017y-pretask
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DzyubSpirit/int20h-2017y-pretask#readme
license:             BSD3
license-file:        LICENSE
author:              Vladka
maintainer:          Dzyubavlad@gmail.com
copyright:           2017 Vladka
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , http-conduit, aeson, unordered-containers
                     , lens-aeson, lens, conduit-extra, split, resourcet, text
                     , JuicyPixels, conduit, conduit-combinators, bytestring
                     , mtl, cairo, time
  default-language:    Haskell2010

executable int20h-2017y-pretask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , int20h-2017y-pretask
  default-language:    Haskell2010

test-suite int20h-2017y-pretask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , int20h-2017y-pretask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/int20h-2017y-pretask
